<resources>
    <string name="app_name">FindIt</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">My Playlist</string>
    <string name="second_fragment_label">Details</string>

    <string name="no_result">No Result</string>
    <string name="new_search">New Search</string>
    <string name="my_story"> </string>
    <string name="streamable">Streamable</string>
    <string name="preview">Preview</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="share">Share track</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet,\nconsectetur adipiscing elit,\nsed do eiusmod tempor incididunt ut labore et dolore magna aliqua,\n Ut enim ad minim veniam,\n quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat,\n Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur,\n Excepteur sint occaecat cupidatat non proident,\n sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="genre_year">%1$s - %2$d</string>
    <string name="favorite_song">Find your favorite song</string>
    <string name="select_media">Select your media</string>
    <string name="rock">Rock</string>
    <string name="movie">Movie</string>
    <string name="music">Music</string>
    <string name="software">Software</string>
    <string name="music_artist">Music Artist</string>
    <string name="music_track">Music Track</string>
    <string name="album">Album</string>
    <string name="song">Song</string>
    <string name="podcast">Podcast</string>
    <string name="ebook">eBook</string>
    <string name="mix">Mix</string>
    <string name="search">Search</string>
    <string name="apply">Apply</string>
    <string name="clear">Clear</string>
    <string name="label">Label</string>
    <string name="common_error">Unknown action</string>
    <string name="helper_text">Song, Author, Collection</string>
    <string name="lyrics">Lyrics</string>
</resources>