<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    app:behavior_hideable="false"
    app:behavior_peekHeight="0dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/bottom_sheet_side_margin"
        android:layout_marginEnd="@dimen/bottom_sheet_side_margin"
        android:background="@drawable/bottom_sheet_border"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/margin_card" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guidelineRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/margin_card" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/favoriteSongTextView"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_element_mid"
            android:text="@string/favorite_song"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/favorite_song" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/labelTextField"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/label"
            app:counterEnabled="true"
            app:helperText="@string/helper_text"
            app:helperTextTextColor="@color/grayscale_500"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/favoriteSongTextView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/labelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/mediaTextView"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_element_mid"
            android:text="@string/favorite_song"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/labelTextField"
            tools:text="@string/select_media" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/mediaChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/mediaTextView">

            <com.google.android.material.chip.Chip
                android:id="@+id/movieChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="false"
                android:clickable="false"
                android:text="@string/movie"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/musicChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/music"
                app:chipStrokeColor="@color/purple_500"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/softwareChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="false"
                android:clickable="false"
                android:text="@string/software"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/podcastChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="false"
                android:clickable="false"
                android:text="@string/podcast"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/ebookChip"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="false"
                android:clickable="false"
                android:text="@string/ebook"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/entityTextView"
            style="@style/TextAppearance.AppCompat.Light.SearchResult.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_element_mid"
            android:text="@string/favorite_song"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/mediaChipGroup"
            tools:text="Select your type" />

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/typeChipGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/guidelineRight"
            app:layout_constraintStart_toStartOf="@id/guidelineLeft"
            app:layout_constraintTop_toBottomOf="@id/entityTextView">

            <com.google.android.material.chip.Chip
                android:id="@+id/musicArtistChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/music_artist"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/musicTrackChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/music_track"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/albumChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/album"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/songChip"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/song"
                app:chipStrokeColor="@color/purple_500"
                app:chipStrokeWidth="1dp" />

            <com.google.android.material.chip.Chip
                android:id="@+id/mixChip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_elements"
                android:checked="true"
                android:clickable="false"
                android:text="@string/mix"
                app:chipStrokeWidth="1dp" />

        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clearButton"
            style="@style/Widget.Material3.Button.OutlinedButton.FindIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_element_large"
            android:layout_marginBottom="@dimen/margin_element_mid"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:text="@string/clear"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/searchButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/typeChipGroup" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/searchButton"
            style="@style/Widget.Material3.Button.FindIt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_element_large"
            android:layout_marginBottom="@dimen/margin_element_mid"
            android:drawableStart="@drawable/ic_baseline_search_24"
            android:text="@string/apply"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/clearButton"
            app:layout_constraintTop_toBottomOf="@id/typeChipGroup" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>